<resources>
    <string name="app_name">Basic Tasks app</string>
    <string name="action_settings">Settings</string>
    <string name="menutitle_addTask">Add Task</string>
    <string name="menutitle_durations">Durations</string>
    <string name="menumain_settings">Settings</string>
    <string name="menumain_about">About</string>
    <string name="menumain_generate">Generate Data</string>
    <string name="no_task_msg">No task selected.</string>
    <string name="btn_edit_description">Button to edit details of a task</string>
    <string name="btn_delete_description">Button to delete a selected task</string>
    <string name="add_edit_name_hint">Enter task name (required)</string>
    <string name="add_edit_description_hint">Enter task description (Optional)</string>
    <string name="add_edit_sort_hint">Order tasks: low to high</string>
    <string name="add_edit_btn_txt">Save</string>
    <string name="add_edit_activity_title">Add or Edit task</string>
    <string name="instructions_heading">Instructions</string>
    <string name="instructions">
        Use the add button (+) in the toolbar above to create new tasks.\n\nTasks with lower sort
        orders will be placed higher up the list. Tasks with the same sort order will be sorted
        alphabetically.\n\nTapping a task will start the timer for that task (and will stop the
        timer for any previous task that was being timed). \n\nEach task has Edit and Delete buttons
        if you want to change the details or remove the task.
    </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="deldiag_delete_agree">Delete</string>
    <string name="deldiag_message">Deleting will also delete all timing data associated with task id %1$d: %2$s.</string>
    <string name="cancel_editdiag_message">You have unsaved changes.  Do you want to abandon your changes, or continue editing?</string>
    <string name="cancel_editdiag_positive">Continue editing…</string>
    <string name="cancel_editdiag_negative">Abandon changes</string>
    <string name="about_weblink">Instructions available at</string>
    <string name="about_url">https://developer.android.com/docs?hl=en</string>
    <string name="about_copyright">Copyright © 2020 Edvardas Malinauskas</string>
    <string name="about_email">For more questions contact edva331@gmail.com</string>
    <string name="about_credits">Icon derived from <b>analog clock</b> at openclipart.org by <b>Anonymous</b></string>
    <string name="about_weblink_v21">Instructions available at https://developer.android.com/docs?hl=en</string>
    <string name="current_timing_text">Timing %1$s</string>
    <string name="rm_title_filter_day">Set report date</string>
    <string name="rm_title_delete">Delete old timings</string>
    <string name="rm_title_filter_week">Show week</string>
    <string name="td_text_name">Task</string>
    <string name="td_text_date">Date</string>
    <string name="td_text_duration">Duration</string>
    <string name="td_text_description">Description</string>
    <string name="activity_durations_title">Durations</string>
    <string name="date_title_filter">Select report date</string>
    <string name="date_title_delete">Select a date to delete to</string>
    <string name="delete_timings_message">Are you sure you want to delete all timings before %1s?</string>
</resources>